preload mouseover images

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -59,5 +59,14 @@
   </div>
 </div>
 
+<div class="pre-load">
+  <!-- pre-load mouseover images in this hidden div -->
+  <img src="{% static 'images/nav-home-hover.png' %}" />
+  <img src="{% static 'images/nav-apps-hover.png' %}" />
+  <img src="{% static 'images/nav-comics-hover.png' %}" />
+  <img src="{% static 'images/nav-music-hover.png' %}" />
+  <img src="{% static 'images/nav-contact-hover.png' %}" />
+</div>
+
 </body>
 </html>
