--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block content %}
 
-<center>Coming Soon...</center>
+<center><h2>Welcome!</h2></center>
+<p>I make websites, apps, games, comics, and music, some of which under my pseudonym Dax Ripley.</p>
+<p>I'm still developing my brand new website here, so you'll find that some (or all) of the links in the menu don't work yet. Check back very soon! Once this message is gone, the website will be done :)</p>
+<p>In the mean time, you can contact me at <a href="mailto:jamie@unrau.me">jamie@unrau.me</a>, or on twitter <a href="https://twitter.com/dax_ripley">@dax_ripley</a>.</p>
 
 {% endblock %}
