hide the menu items that don't yet have active pages

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -27,10 +27,12 @@
   <div class="content-wrapper">
     <div class="navi-links">
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
+      <!-- HIDE THESE LINKS WHILE THEY STILL DON'T WORK
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-apps"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-contact"></a>
+      -->
     </div> <!-- #navi-links -->
     <div id="navi-sep"></div>
   </div> <!-- .content-wrapper -->
