hide inactive links in the footer menu too

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -49,10 +49,12 @@
     <div id="footer-sep"></div>
     <div class="navi-links">
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
+      <!-- HIDE THESE LINKS TOO >_<
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-apps"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-contact"></a>
+      -->
     </div> <!-- #navi-links -->
     <p>Website designed by me in Affinity Designer</p>
     <p>Self-illustration drawn by me in Procreate</p>
