un-hide the apps links in navigation

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -27,8 +27,8 @@
   <div class="content-wrapper">
     <div class="navi-links">
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
+      <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
       <!-- HIDE THESE LINKS WHILE THEY STILL DON'T WORK
-      <a href="{% url 'index' %}" class="navi-link" id="navi-link-apps"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-contact"></a>
@@ -49,8 +49,8 @@
     <div id="footer-sep"></div>
     <div class="navi-links">
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
-      <!-- HIDE THESE LINKS TOO >_<
-      <a href="{% url 'index' %}" class="navi-link" id="navi-link-apps"></a>
+      <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
+      <!-- HIDE THESE LINKS TOO
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-contact"></a>
