initialize the contact page

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -31,8 +31,8 @@
       <!-- HIDE THESE LINKS WHILE THEY STILL DON'T WORK
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
-      <a href="{% url 'index' %}" class="navi-link" id="navi-link-contact"></a>
       -->
+      <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
     </div> <!-- #navi-links -->
     <div id="navi-sep"></div>
   </div> <!-- .content-wrapper -->
@@ -53,8 +53,8 @@
       <!-- HIDE THESE LINKS TOO
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
-      <a href="{% url 'index' %}" class="navi-link" id="navi-link-contact"></a>
       -->
+      <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
     </div> <!-- #navi-links -->
     <p>Website designed by me in Affinity Designer</p>
     <p>Self-illustration drawn by me in Procreate</p>
