--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -28,8 +28,8 @@
     <div class="navi-links">
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
       <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
+      <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
       <!-- HIDE THESE LINKS WHILE THEY STILL DON'T WORK
-      <a href="{% url 'index' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
       -->
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
@@ -50,8 +50,8 @@
     <div class="navi-links">
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
       <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
+      <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
       <!-- HIDE THESE LINKS TOO
-      <a href="{% url 'index' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
       -->
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
