move base template to new project templates folder

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 
 <div class="content-wrapper">
   <div id="content">
-    {% block content %}{% endblock %}
+    {% block content %}{% endblock content %}
   </div>
 </div> <!-- .content -->
 
