un-hide the music links from navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,9 +29,7 @@
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
       <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
       <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
-      <!-- HIDE THESE LINKS WHILE THEY STILL DON'T WORK
-      <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
-      -->
+      <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
     </div> <!-- #navi-links -->
     <div id="navi-sep"></div>
@@ -51,9 +49,7 @@
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
       <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
       <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
-      <!-- HIDE THESE LINKS TOO
-      <a href="{% url 'index' %}" class="navi-link" id="navi-link-music"></a>
-      -->
+      <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
     </div> <!-- #navi-links -->
     <p>Website designed by me in Affinity Designer</p>
