Add pagination to music app

--- a/music/templates/music.html
+++ b/music/templates/music.html
@@ -14,4 +14,15 @@
 </div>
 {% endfor %}
 
+{% if is_paginated %}
+<ul class="pagination justify-content-center">
+    {% if page_obj.has_previous %}
+    <li><a href="?page={{ page_obj.previous_page_number }}">&laquo; PREV </a></li>
+    {% endif %}
+    {% if page_obj.has_next %}
+    <li><a href="?page={{ page_obj.next_page_number }}"> NEXT &raquo;</a></li>
+    {% endif %}
+</ul>
+{% endif %}
+
 {% endblock %}
