update the under-construction message

--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -4,7 +4,7 @@
 
 <center><h2>Welcome!</h2></center>
 <p>I make websites, apps, games, comics, and music, some of which under my pseudonym Dax Ripley.</p>
-<p>I'm still developing my brand new website here. Check back very soon! Once this message is gone, the website will be done :)</p>
+<p>I'm still developing this brand-new website, so there's not much content yet in these pages. Please check back very soon! You'll know the website is finished when this message has vanished :)</p>
 <p>In the mean time, you can contact me at <a href="mailto:jamie@unrau.me">jamie@unrau.me</a>, or on twitter <a href="https://twitter.com/dax_ripley">@dax_ripley</a>.</p>
 
 {% endblock %}
