add Ostrich Sans Heavy font for titles

--- a/staticfiles/stylesheets/raygun.css
+++ b/staticfiles/stylesheets/raygun.css
@@ -3,6 +3,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 
+@font-face {
+    font-family: 'Ostrich Sans Heavy';
+    src: url('/static/fonts/ostrichsans-heavy-webfont.woff2') format('woff2'),
+         url('/static/fonts/ostrichsans-heavy-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 
 
 
@@ -31,6 +40,17 @@ body {
 
 .pre-load {
     display: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Ostrich Sans Heavy', 'Open Sans', sans-serif;
+    margin: 10px 0 10px 0;
+}
+h1 {
+    font-size: 30px;
+}
+h2 {
+    font-size: 36px;
 }
 
 
