--- a/staticfiles/stylesheets/raygun.css
+++ b/staticfiles/stylesheets/raygun.css
@@ -293,6 +293,12 @@ a#navi-link-contact:active {
  .music-post img {
      max-width: 100%;
      height: auto;
+     -webkit-border-radius: 20px;
+     -moz-border-radius: 20px;
+     border-radius: 20px;
+     border-bottom-style: solid;
+     border-bottom-width: 4px;
+     border-bottom-color: #4C708E;
  }
 
  .music-post .post-title {
