replace html center tags with proper css styling

--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 
-<center><h2>Apps & Games</h2></center>
+<div class="page-title">
+    <h2>APPS & GAMES</h2>
+</div>
 
 {% endblock %}
