--- a/pages/templates/comics.html
+++ b/pages/templates/comics.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 
-<center><h2>Comics</h2></center>
+<div class="page-title">
+    <h2>COMICS</h2>
+</div>
 
 {% endblock %}
