--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 
-<center><h2>Contact</h2></center>
+<div class="page-title">
+    <h2>CONTACT ME</h2>
+</div>
 
 {% endblock %}
