provide a finny message on the music page when no performances are scheduled

--- a/music/templates/music.html
+++ b/music/templates/music.html
@@ -6,7 +6,7 @@
     <h2>MUSIC</h2>
     <p>I write and perform original songs and parodies, and sometimes perform at Open Mics.</p>
     <b>Upcoming Live Performances:</b><br />
-    None
+    None, ya hoser, there's a plague on
 </div>
 
 {{ template_name }}
