--- a/staticfiles/stylesheets/raygun.css
+++ b/staticfiles/stylesheets/raygun.css
@@ -356,6 +356,7 @@ a.music-post-title-link .post-title:hover h3 {
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
+    max-width: 100%;
 }
 
 
