add links and code for browser games

--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -3,7 +3,69 @@
 {% block content %}
 
 <div class="page-title">
-    <h2>APPS & GAMES</h2>
+    <h2>APPS GAMES & Other Projects</h2>
+</div>
+
+<!--
+<div class="app-entry">
+    <h4 class="app-title">APP</h4>
+    <p class="app-image"></p>
+    <p class="app-link"><a href="#">&raquo; LINK</a></p>
+    <p class="app-desc">DESC</p>
+</div>
+-->
+
+<div class="app-category"><h3>WEB APPS</h3></div>
+
+<div class="app-entry">
+    <h4 class="app-title">This Website</h4>
+    <p class="app-image"></p>
+    <a href="#" class="app-link">&raquo; View Code</a>
+    <p class="app-desc">I designed this website using Affinity Photo and Procreate on my iPad, and developed it with Python on the Django framework.</p>
+</div>
+
+
+
+<div class="app-category"><h3>GAMES</h3></div>
+
+<div class="app-entry">
+    <h4 class="app-title">CHAR 9786</h4>
+    <p class="app-image"></p>
+    <p class="app-link"><a href="#">&raquo; Play Demo</a></p>
+    <p class="app-desc">This is a game I am currently developing in the amazing and open-source Godot engine, using the Python programming language. Code, art, and animations are made by me.</p>
+</div>
+
+<div class="app-entry">
+    <h4 class="app-title">Extreme Stopwatch</h4>
+    <p class="app-image"></p>
+    <p class="app-link"><a href="#">&raquo; View Archived App-Store Entry</a></p>
+    <p class="app-desc">A simple iOS game that I developed and published, but is no longer available, because it wasn't worthwhile to continue paying to keep it up.</p>
+</div>
+
+<div class="app-entry">
+    <h4 class="app-title">Browser Games</h4>
+    <p class="app-image"></p>
+    <p class="app-link"><a href="/static/files/rescape/index.html">&raquo; View Code & Play Game: Pocket Universe Rescape</a></p>
+    <p class="app-link"><a href="/static/files/pong/index.html">&raquo; View Code & Play Game: Digital Ping Pong</a></p>
+    <p class="app-desc">These are games I developed using Python on the CodeSkulptor engine. Note: the engine experiences some compatibility issues on various browsers from time to time. In particular, if sound doesn't work, try another browser.</p>
+</div>
+
+<div class="app-entry">
+    <h4 class="app-title">Extreme Cave Chopper</h4>
+    <p class="app-image"></p>
+    <p class="app-link"><a href="#">&raquo; Play Game: Extreme Cave Chopper</a></p>
+    <p class="app-desc">This is a simple helicopter game I made in the Pico-8 fantasy console.</p>
+</div>
+
+
+
+<div class="app-category"><h3>OTHER PROJECTS</h3></div>
+
+<div class="app-entry">
+    <h4 class="app-title">Future Industries Keybender: Avatar Aang Edition</h4>
+    <p class="app-image"></p>
+    <p class="app-link"><a href="#">&raquo; Visit Project Page</a></p>
+    <p class="app-desc">This is a custom computer keyboard I am building, styled after the Airbenders in the world of Avatar: The Last Airbender, and The Legend of Korra. This project includes material and PCB sourcing, soldering, firmware writing & flashing, and hobby-level manufacturing.</p>
 </div>
 
 {% endblock %}
