--- a/staticfiles/stylesheets/raygun.css
+++ b/staticfiles/stylesheets/raygun.css
@@ -68,6 +68,9 @@ h2 {
 h3 {
     font-size: 30px;
 }
+h4 {
+    font-size: 26px;
+}
 
 ul.pagination {
     text-align: center;
@@ -270,6 +273,33 @@ a#navi-link-contact:active {
 .page-title {
     text-align: center;
     margin-bottom: 30px;
+}
+
+
+
+
+/* CONTENT - APPS */
+
+.app-entry {
+    padding: 15px 25px;
+    border-top-style: solid;
+    border-top-width: 4px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    border-top-color: #8CBCE4;
+    background-color: #FFFFFF;
+    color: #4C708E;
+    font-size: 16px;
+    margin-bottom: 80px;
+}
+
+.app-category {
+    text-align: center;
+    margin-bottom: 40px;
+}
+.app-category h3 {
+    color: #E5C6EC;
 }
 
 
