add demo for CHAR9786 game, and link for it in apps page

--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -20,7 +20,7 @@
 <div class="app-entry">
     <h4 class="app-title">This Website</h4>
     <p class="app-image"></p>
-    <a href="#" class="app-link">&raquo; View Code</a>
+    <a href="https://github.com/unrau/unrau-django" class="app-link">&raquo; View Code</a>
     <p class="app-desc">I designed this website using Affinity Photo and Procreate on my iPad, and developed it with Python on the Django framework.</p>
 </div>
 
@@ -31,7 +31,7 @@
 <div class="app-entry">
     <h4 class="app-title">CHAR 9786</h4>
     <p class="app-image"></p>
-    <p class="app-link"><a href="#">&raquo; Play Demo</a></p>
+    <p class="app-link"><a href="/static/files/char9786/index.html">&raquo; Play Demo</a></p>
     <p class="app-desc">This is a game I am currently developing in the amazing and open-source Godot engine, using the Python programming language. Code, art, and animations are made by me.</p>
 </div>
 
