--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -38,7 +38,7 @@
 <div class="app-entry">
     <h4 class="app-title">Extreme Stopwatch</h4>
     <p class="app-image"></p>
-    <p class="app-link"><a href="#">&raquo; View Archived App-Store Entry</a></p>
+    <p class="app-link"><a href="http://extreme-stopwatch.appstor.io">&raquo; View Archived App-Store Entry</a></p>
     <p class="app-desc">A simple iOS game that I developed and published, but is no longer available, because it wasn't worthwhile to continue paying to keep it up.</p>
 </div>
 
@@ -53,8 +53,8 @@
 <div class="app-entry">
     <h4 class="app-title">Extreme Cave Chopper</h4>
     <p class="app-image"></p>
-    <p class="app-link"><a href="#">&raquo; Play Game: Extreme Cave Chopper</a></p>
-    <p class="app-desc">This is a simple helicopter game I made in the Pico-8 fantasy console.</p>
+    <p class="app-link"><a href="/static/files/cavechopper/index.html">&raquo; Play Game: Extreme Cave Chopper</a></p>
+    <p class="app-desc">This is a simple helicopter game I made in the Pico-8 fantasy console. What makes it extreme? Boulders fall on you! Yup, pretty extreme. Control with V, Z, and Left and Right arrows.</p>
 </div>
 
 
