clarify play instructions for CHAR9786 game

--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -32,7 +32,7 @@
     <h4 class="app-title">CHAR 9786</h4>
     <p class="app-image"></p>
     <p class="app-link"><a href="/static/files/char9786/index.html">&raquo; Play Demo</a></p>
-    <p class="app-desc">This is a game I am currently developing in the amazing and open-source Godot engine, using the Python programming language. Code, art, and animations are made by me.</p>
+    <p class="app-desc">This is a game I am currently developing in the amazing and open-source Godot engine, using the Python programming language. Code, art, and animations are made by me. The demo linked above is playable in your browser.</p>
 </div>
 
 <div class="app-entry">
