initialize keybender project page, and add links

--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -64,7 +64,7 @@
 <div class="app-entry">
     <h4 class="app-title">Future Industries Keybender: Avatar Aang Edition</h4>
     <p class="app-image"></p>
-    <p class="app-link"><a href="#">&raquo; Visit Project Page</a></p>
+    <p class="app-link"><a href="{% url 'keybender' %}">&raquo; Visit Project Page</a></p>
     <p class="app-desc">This is a custom computer keyboard I am building, styled after the Airbenders in the world of Avatar: The Last Airbender, and The Legend of Korra. This project includes material and PCB sourcing, soldering, firmware writing & flashing, and hobby-level manufacturing.</p>
 </div>
 
