centre the coming-soon message of the keybender page

--- a/pages/templates/keybender.html
+++ b/pages/templates/keybender.html
@@ -6,6 +6,6 @@
     <h2>FUTURE INDUSTRIES KEYBENDER: AVATAR AANG EDITION</h2>
 </div>
 
-<p>Project info and images coming soon.</p>
+<center><p>Project info and images coming soon.</p></center>
 
 {% endblock %}
