add content to the contact page

--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -6,4 +6,10 @@
     <h2>CONTACT ME</h2>
 </div>
 
+<center>
+    <p>I am looking for work as a web developer or software engineer, and can also provide web design services. If you are a prospective employer, or if you would like to inquire about collaboration, please contact me.</p>
+    <p>You can reach me at <a href="mailto:jamie@unrau.me">jamie@unrau.me</a></p>
+    <p>or on Twitter <a href="https://twitter.com/dax_ripley">@dax_ripley</a></p>
+</center>
+
 {% endblock %}
