add Gender Queeries website to apps page

--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -24,6 +24,12 @@
     <p class="app-desc">I designed this website using Affinity Photo and Procreate on my iPad, and developed it with Python on the Django framework.</p>
 </div>
 
+<div class="app-entry">
+    <h4 class="app-title">Gender Queeries</h4>
+    <a href="http://www.genderqueeries.ca" class="app-link">&raquo; Visit GenderQueeries.ca</a>
+    <p class="app-desc">I designed and built this simple website on the Wordpress content management system, for the radio show Gender Queeries on 100.5 FM: Vancouver's Co-Op Radio.</p>
+</div>
+
 
 
 <div class="app-category"><h3>GAMES</h3></div>
