--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 <div class="page-title">
-    <h2>APPS GAMES & Other Projects</h2>
+    <h2>APPS & GAMES</h2>
+    <p>This page contains the various software I've developed, or am currently developing.</p>
 </div>
 
 <!--
@@ -55,17 +56,6 @@
     <p class="app-image"></p>
     <p class="app-link"><a href="/static/files/cavechopper/index.html">&raquo; Play Game: Extreme Cave Chopper</a></p>
     <p class="app-desc">This is a simple helicopter game I made in the Pico-8 fantasy console. What makes it extreme? Boulders fall on you! Yup, pretty extreme. Control with V, Z, and Left and Right arrows.</p>
-</div>
-
-
-
-<div class="app-category"><h3>OTHER PROJECTS</h3></div>
-
-<div class="app-entry">
-    <h4 class="app-title">Future Industries Keybender: Avatar Aang Edition</h4>
-    <p class="app-image"></p>
-    <p class="app-link"><a href="{% url 'keybender' %}">&raquo; Visit Project Page</a></p>
-    <p class="app-desc">This is a custom computer keyboard I am building, styled after the Airbenders in the world of Avatar: The Last Airbender, and The Legend of Korra. This project includes material and PCB sourcing, soldering, firmware writing & flashing, and hobby-level manufacturing.</p>
 </div>
 
 {% endblock %}
