--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -10,4 +10,6 @@
 <p>I'm still developing this brand-new website, so there's not much content yet in these pages. Please check back very soon! You'll know the website is finished when this message has vanished :)</p>
 <p>In the mean time, you can contact me at <a href="mailto:jamie@unrau.me">jamie@unrau.me</a>, or on twitter <a href="https://twitter.com/dax_ripley">@dax_ripley</a>.</p>
 
+{% include "blog_recents.html" %}
+
 {% endblock %}
