--- a/staticfiles/stylesheets/raygun.css
+++ b/staticfiles/stylesheets/raygun.css
@@ -392,6 +392,93 @@ a.music-post-title-link .post-title:hover h3 {
 
 
 
+/* CONTENT - BLOG */
+
+.blog-post {
+    padding: 15px 25px;
+    border-bottom-style: solid;
+    border-bottom-width: 4px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+    border-bottom-color: #8CBCE4;
+    background-color: #D1E1F2;
+    margin-bottom: 30px;
+    color: #4C708E;
+    font-size: 16px;
+    text-align: center;
+}
+
+a.blog-post-title-link {
+    background-color: transparent !important;
+}
+a.blog-post-title-link .post-title:hover h3 {
+    color: #373E64;
+}
+
+.blog-post .post-content a,
+.blog-post .post-content a:link {
+    color: #8CBCE4 !important;
+}
+.blog-post .post-content a:hover,
+.blog-post .post-content a:active {
+    color: #373E64 !important;
+    background-color: transparent !important;
+}
+
+.blog-post img {
+    max-width: 100%;
+    height: auto;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    border-bottom-style: solid;
+    border-bottom-width: 4px;
+    border-bottom-color: #4C708E;
+}
+
+.blog-post .post-title {
+    display: inline-block;
+    width: 95%;
+    text-align: center;
+    background-color: #FFFFFF;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    max-width: 100%;
+    padding: 10px;
+    border-bottom-style: solid;
+    border-bottom-width: 4px;
+    border-bottom-color: #FED5FE;
+}
+.blog-post .post-title h3 {
+    color: #4C708E;
+}
+.blog-post .post-title p {
+    margin: 0;
+}
+
+.blog-post .post-date {
+    color: #8CBCE4;
+}
+
+.blog-post .post-content {
+    margin: 20px 0;
+}
+
+.blog-post .note-video-clip {
+    border-bottom-style: solid;
+    border-bottom-width: 4px;
+    border-bottom-color: #4C708E;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    max-width: 100%;
+}
+
+
+
+
 /* FOOTER */
 
 #footer {
