Correct software attribution from Affinity Photo to Affinity Designer

--- a/pages/templates/apps.html
+++ b/pages/templates/apps.html
@@ -22,7 +22,7 @@
     <h4 class="app-title">This Website</h4>
     <p class="app-image"></p>
     <a href="https://github.com/unrau/unrau-django" class="app-link">&raquo; View Code</a>
-    <p class="app-desc">I designed this website using Affinity Photo and Procreate on my iPad, and developed it with Python on the Django framework.</p>
+    <p class="app-desc">I designed this website using Affinity Designer and Procreate on my iPad, and developed it with Python on the Django MVC framework.</p>
 </div>
 
 <div class="app-entry">
