Replace software attribution in footer with copyright

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,9 +52,7 @@
       <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
     </div> <!-- #navi-links -->
-    <p>Website designed by me in Affinity Designer</p>
-    <p>Self-illustration drawn by me in Procreate</p>
-    <p>Website coded by me with Python on the Django framework</p>
+    <p>Copyright &copy; {% now "Y" %} Jamie Unrau. All Rights Reserved.</p>
     <div id="footer-sep-bottom"></div>
   </div>
 </div>
