--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
       <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
       <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
+      <a href="{% url 'blog' %}" class="navi-link" id="navi-link-blog"></a>
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
     </div> <!-- #navi-links -->
     <div id="navi-sep"></div>
@@ -50,6 +51,7 @@
       <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
       <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
+      <a href="{% url 'blog' %" class="navi-link" id="navi-link-blog"></a>
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
     </div> <!-- #navi-links -->
     <p>Copyright &copy; {% now "Y" %} Jamie Unrau. All Rights Reserved.</p>
