pre-load the blog nav mouseover image

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,7 @@
   <img src="{% static 'images/nav-apps-hover.png' %}" />
   <img src="{% static 'images/nav-comics-hover.png' %}" />
   <img src="{% static 'images/nav-music-hover.png' %}" />
+  <img src="{% static 'images/nav-blog-hover.png' %}" />
   <img src="{% static 'images/nav-contact-hover.png' %}" />
 </div>
 
