hide the comics link from nav menu until comics are ready to be published

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <div class="navi-links">
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
       <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
-      <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
+      <!--<a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>-->
       <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'blog' %}" class="navi-link" id="navi-link-blog"></a>
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
@@ -49,7 +49,7 @@
     <div class="navi-links">
       <a href="{% url 'index' %}" class="navi-link" id="navi-link-home"></a>
       <a href="{% url 'apps' %}" class="navi-link" id="navi-link-apps"></a>
-      <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
+      <!--<a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>-->
       <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'blog' %" class="navi-link" id="navi-link-blog"></a>
       <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
