--- a/staticfiles/stylesheets/colours.css
+++ b/staticfiles/stylesheets/colours.css
@@ -1,8 +1,12 @@
-/* COLOURS
+/* MAIN SITE COLOURS
 - Dark Blue        - #373E64
 - Dark Medium Blue - #4C708E
 - Medium Blue      - #8CBCE4
 - Light Blue       - #D1E1F2
 - Light Pink       - #E5C6EC
 - Bright Pink      - #FED5FE
+*/
+
+/* KNOT OF THIS WORLD COLOURS
+- 
 */
