move body styles for main website to new div

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
   <link rel="manifest" href="/static/favicon/site.webmanifest">
 </head>
 <body>
+<div id="mainbody">
 
 <div id="header" class="content-wrapper">
   <div id="title">
@@ -73,5 +74,6 @@
   <img src="{% static 'images/nav-contact-hover.png' %}" />
 </div>
 
+</div> <!-- #mainbody -->
 </body>
 </html>
