--- a/staticfiles/stylesheets/raygun.css
+++ b/staticfiles/stylesheets/raygun.css
@@ -38,6 +38,11 @@
 /* SITE */
 
 body {
+    padding: 0;
+    margin: 0;
+}
+
+#mainbody {
     background-color: #ffffff;
     color: #000000;
     padding: 0;
